--- a/style.css
+++ b/style.css
@@ -478,3 +478,92 @@ section{
 .container-cv{
     display: flex;
 }
+
+.hero-mmi{
+    height: 100%;
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(245.59deg, #f54655 0%, #b41a34 28.53%, #580416 75.52%);
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    align-items: center;
+}
+
+.container-mmi{
+    margin-top: 100px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-flow: wrap;
+}
+
+.box{
+    width: 25%;
+    height: 300px;
+    background: rgba(255, 255, 255, 0.384);
+    border-radius: 16px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    font-size: 20px;
+}
+
+.box h2{
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    color: white;
+}
+
+.box:hover h2 {
+    transition: 0.3s;
+    color: #580416;
+}
+
+.box:hover{
+    transition: 0.3s;
+    background-color: white;
+}
+
+#popup-overlay{
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.247);
+    z-index: 98;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+#popup-overlay.open{
+    display: flex;
+}
+
+.popup-content{
+    max-width: 1200px;
+    width: 100%;
+    padding: 30px;
+    box-sizing:border-box;
+    background-color: white;
+}
+
+.popup-content p{
+    margin: 20px 0;
+}
+
+.popup-btn{
+    text-decoration: none;
+    color: white;
+    background: #580416;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: inline-block;
+}
