--- a/style.css
+++ b/style.css
@@ -668,15 +668,31 @@ section{
 }
 
 .popup-content4{
+    overflow: scroll;
     max-width: 1200px;
     width: 100%;
     padding: 30px;
     box-sizing:border-box;
     background-color: white;
+    text-align: center;
+
+}
+
+.popup-content4 h2{
+    color: #580416;
+    font-weight: bold;
+    font-size: 35px;
+    font: bolder;
+}
+
+.popup-content4 img{
+    width: 800px;
+    object-fit: contain;
+
 }
 
 .popup-content4 p{
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .popup-btn4{
@@ -794,4 +810,53 @@ span{
 
 .popup-content h2{
     font-size: 50px;
+}
+
+.container-slider{
+    padding: 2rem;
+}
+
+.slider-wrapper{
+    position: relative;
+    max-width: 48rem;
+    margin: 0 auto;
+}
+
+.slider{
+    display: flex;
+    aspect-ratio: 16 / 9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    border-radius: 0.5rem;
+}
+
+.slider img{
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: contain;
+}
+
+.slider-nav{
+    display: flex;
+    column-gap: 1rem;
+    position: absolute;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
+
+.slider-nav a{
+    width: 0.7rem;
+    height: 0.7rem;
+    border-radius: 50%;
+    background-color: #580416;
+    opacity: 0.4;
+    transition: opacity ease 250ms;
+}
+
+.slider-nav a:hover{
+    opacity: 1;
 }
